baml_language/crates/baml_tests/snapshots/type_aliases/baml_tests__type_aliases__01_lexer__type_aliases.snap
---
source: target/debug/build/baml_tests-ddc6647912a5d7c4/out/generated_tests.rs
expression: output
---
Word "type"
Word "foo"
Equals "="
Word "bar"
Word "type"
Word "bar"
Equals "="
Word "int"
Slash "/"
Slash "/"
Word "Should"
Word "pass"
Dot "."
Function "function"
Word "Foo"
LParen "("
RParen ")"
Arrow "->"
Word "foo"
LBrace "{"
IntegerLiteral "1"
RBrace "}"
Slash "/"
Slash "/"
Word "Should"
Word "fail"
Dot "."
Function "function"
Word "Bar"
LParen "("
RParen ")"
Arrow "->"
Word "foo"
LBrace "{"
Word "true"
RBrace "}"
Word "type"
Word "Json"
Equals "="
Word "int"
Pipe "|"
Word "float"
Pipe "|"
Word "string"
Pipe "|"
Word "Json"
LBracket "["
RBracket "]"
Pipe "|"
Word "map"
Less "<"
Word "string"
Comma ","
Word "Json"
Greater ">"
Slash "/"
Slash "/"
Word "Should"
Word "pass"
Dot "."
Function "function"
Word "Baz"
LParen "("
RParen ")"
Arrow "->"
Word "Json"
LBrace "{"
Quote "\""
Word "hello"
Quote "\""
RBrace "}"
