baml_language/crates/baml_tests/snapshots/type_aliases/baml_tests__type_aliases__01_lexer__type_aliases_json.snap
---
source: target/debug/build/baml_tests-176fd1045f27e6d5/out/generated_tests.rs
expression: output
---
Word "type"
Word "JSON"
Equals "="
Word "int"
Pipe "|"
Word "float"
Pipe "|"
Word "string"
Pipe "|"
Word "bool"
Pipe "|"
Word "JSON"
LBracket "["
RBracket "]"
Pipe "|"
Word "map"
Less "<"
Word "string"
Comma ","
Word "json"
Greater ">"
Class "class"
Word "NotJSON"
LBrace "{"
Word "inner"
Word "name"
RBrace "}"
Slash "/"
Slash "/"
Word "Should"
Word "be"
Word "type"
Word "error"
Dot "."
Function "function"
Word "EchoJSON"
LParen "("
Word "i"
Colon ":"
Word "JSON"
RParen ")"
Arrow "->"
Word "JSON"
LBrace "{"
Word "NotJSON"
LBrace "{"
Word "inner"
Colon ":"
Quote "\""
Word "Whoops"
Quote "\""
RBrace "}"
RBrace "}"
Slash "/"
Slash "/"
Word "Should"
Word "work"
Dot "."
Function "function"
Word "MakeJSON"
LParen "("
Word "i"
Colon ":"
Word "NotJSON"
RParen ")"
Arrow "->"
Word "JSON"
LBrace "{"
Word "i"
Dot "."
Word "inner"
RBrace "}"
